Added production-ready-features and rating part

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=UberApp
 
 server.port = 8081
 #DB configuration
-spring.datasource.url = jdbc:postgresql://localhost:5432/postgres?useSSL=false
+spring.datasource.url = jdbc:postgresql://localhost:5432/uber?useSSL=false
 spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=create-drop
